services/message/deploy/canary/message-service-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service-canary
  labels:
    app: message-service
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
      version: canary
  template:
    metadata:
      labels:
        app: message-service
        version: canary
    spec:
      containers:
        - name: message-service
          image: message-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
