services/message/deploy/canary/message-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: message-service
      version: canary
  template:
    metadata:
      labels:
        app: message-service
        version: canary
    spec:
      containers:
        - name: message-service
          image: message-service:latest
          ports:
            - containerPort: 50052
