services/message/deploy/canary/message-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
    version: canary
  ports:
    - name: grpc
      protocol: TCP
      port: 50020
      targetPort: 50020
    - name: http
      protocol: TCP
      port: 8020
      targetPort: 8020
    - name: swagger
      protocol: TCP
      port: 8021
      targetPort: 8021
