services/message/deploy/canary/message-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: message-service
spec:
  hosts:
    - message-service
  http:
    - route:
        - destination:
            host: message-service
            subset: stable
          weight: 90
        - destination:
            host: message-service
            subset: canary
          weight: 10
      port:
        number: 8020
